# stock_analysis

./: .gitignore  dynamodb-local-metadata.json  pyproject.toml  requirements.txt  shared-local-instance.db
dynamodb_local_latest/: dynamodb-local-metadata.json
stock_analysis/: analysis.py  config.py  dynamodb.py  index.py  model.py  request.py  scrape.py  stock_symbols.txt
