[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_analysis"
version = "1.0.0"
dependencies = [
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["stock_analysis"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
